--- a/src/WhetherApp/AppCode/App.css
+++ b/src/WhetherApp/AppCode/App.css
@@ -5,7 +5,7 @@
     font-family: 'poppins', sans-serif;
 }
 body{
-   background-image: url("./Images/cloud.gif");
+   background-image: url("../Images/cloud.gif");
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.9;
@@ -18,7 +18,7 @@ body{
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
-    background-image: url("./Images/bg.jpg");
+    background-image: url("../Images/bg.jpg");
     opacity: 0.6;
     background-size: contain;
     height: 500px;
